// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should allowed all size 1`] = `
<button class="fect-btn default mini ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn default small ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn default medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn default large ">
  <!---->
  <!---->
  <!---->
</button>
`;

exports[`Button should allowed all types 1`] = `
<button class="fect-btn default medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn success medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn warning medium ">
  <!---->
  <!---->
  <!---->
</button><button class="fect-btn error medium ">
  <!---->
  <!---->
  <!---->
</button>
`;

exports[`Button should be render as Element 1`] = `
<button class="fect-btn default medium ">
  <!---->
  <!---->
  <!---->
</button>
`;
